[package]
name = "pxtally"
version = "1.1.1"
edition = "2024"
authors = [ "tukinami seika" ]
license = "MIT"
readme = "README.md"
description = "CLI tool to tally pixels."
repository = "https://github.com/tukinami/pxtally"
keywords = ["cli", "command", "color", "oklch" ]
categories = ["command-line-utilities"]

[dependencies]
image = "0.25.9"
clap = { version = "4.5.60", features = ["derive"] }
color = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.27.0"
